# Orbita

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20e50bad7bb8_create_users_table.py  258bf0d51e87_create_tasks_and_notes_tables.py  a1b2c3d4e5f6_create_areas_table.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  area.py  note.py  task.py  user.py
backend/app/routers/: areas.py  auth.py  notes.py  tasks.py
backend/app/schemas/: area.py  auth.py  note.py  task.py
backend/app/services/: area_service.py  auth_service.py  note_service.py  task_service.py
backend/app/tests/: conftest.py  test_area_routes.py  test_area_service.py  test_auth_routes.py  test_auth_service.py  test_note_routes.py  test_note_service.py  test_task_routes.py  test_task_service.py
frontend/: eslint.config.mjs  jest.config.ts  jest.setup.ts  package-lock.json  package.json
frontend/__mocks__/: framer-motion.js
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/areas/: AreaBubble.tsx  AreaGrid.tsx  AreaModal.tsx
frontend/src/components/editor/: EditorToolbar.tsx  RichTextEditor.tsx  editor.css
frontend/src/hooks/: useAreas.ts  useNotes.ts  useTasks.ts
frontend/src/lib/: api.ts  auth.ts  icons.ts  relativeTime.ts
frontend/src/services/: area.service.ts  auth.service.ts  note.service.ts  task.service.ts
frontend/src/store/: auth.store.ts
frontend/src/tests/: AreaBubble.test.tsx  EditorToolbar.test.tsx  EmptyState.test.tsx  NoteCard.test.tsx  RichTextEditor.test.tsx  Skeleton.test.tsx  TaskItem.test.tsx  auth.service.test.ts  auth.store.test.ts  smoke.test.tsx  useAreas.test.ts  useTasks.test.ts
(+12 files in other folders)
