[tool.poetry]
name = "orbita-backend"
version = "0.1.0"
description = "Orbita — personal organizer API"
authors = ["Orbita Contributors"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = ">=0.111", extras = ["standard"] }
sqlalchemy = ">=2.0"
alembic = ">=1.13"
asyncpg = ">=0.29"
pydantic-settings = ">=2.2"
python-jose = { version = ">=3.3", extras = ["cryptography"] }
passlib = { version = ">=1.7", extras = ["bcrypt"] }
python-multipart = ">=0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"
pytest-cov = ">=5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
